refactor: 調整交易邏輯與查詢方式，配合中介表設計
- TransactionHistoryRepository 使用 JOIN 中介表方式查詢
- 優化從 PharmacyMaskInventory 取得 Mask 的方式